# Cyb3rD3sk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs
.cargo/: config.toml
docs/: cyberdesk-architecture.md  cyberdesk-decisions.md  cyberdesk-degoogle-audit.md  cyberdesk-feature-backlog.md  cyberdesk-roadmap.txt  cyberdesk-security.md  cyberdesk-wire-format.md
docs/updates/: README.md  cyberdesk.sample.json
scripts/: fetch-cef.ps1  harden-selftest.mjs  no-emdash.mjs
src/: app.rs  appearance.rs  browser.rs  command.css  command.html  command.js  harden.rs  hardening.js  hud.css  hud.html  hud.js  info.css  info.html  info.js  info_glyph.wgsl  lock.css  lock.html  lock.js  logging.rs  main.rs  memory.rs  mfzone.css  mfzone.html  mfzone.js  onion.css  onion.html  onion.js  page.wgsl  pulsegrid_composite.wgsl  pulsegrid_sprite.wgsl  renderer.rs  ring.wgsl  settings.css  settings.html  settings.js  settings.rs  slot_lines.wgsl  slot_placeholder.wgsl  slots.rs  start.css  (+9 more)
