[package]
name = "cyberdesk"
version = "0.1.0"
edition = "2024"
description = "CARVILON CyberDesk — desktop shell (Rust host + CEF)"
authors = ["Sascha Daemgen IT and More Systems"]
license-file = "LICENSE"
publish = false

[[bin]]
name = "cyberdesk"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = "30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# CEF binding — exact pin (see docs/cyberdesk-decisions.md, D-0002).
# default-features = false disables the Windows sandbox feature (no_sandbox);
# see D-0008 for the tracked deviation from the "sandbox stays active" doctrine.
cef = { version = "=149.3.0", default-features = false }
# App state store (schema-versioned key/value settings) and theme tokens.
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
# Update-awareness HTTPS client (CD-13, D-0023) — the host's ONE intentional
# outbound connection, a single pinned manifest. rustls-based (no OpenSSL); the
# reasoned exception to the lean-dependency doctrine is recorded in D-0023.
ureq = { version = "2", default-features = false, features = ["tls"] }
# Embedded Tor engine (CD-15, D-0026) — pure-Rust Tor via arti-client, rustls
# (no OpenSSL), on a background tokio runtime. Heavy but justified by the
# per-window Tor feature; the reasoned dependency exception is recorded in D-0026.
arti-client = { version = "0.44", default-features = false, features = ["tokio", "rustls"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
# Bridges arti's futures-based DataStream to tokio's AsyncRead/Write for the SOCKS relay.
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
# Names arti's PreferredRuntime (already in the tree via arti-client) for the client type.
tor-rtcompat = { version = "0.44", default-features = false, features = ["tokio", "rustls"] }

[profile.release]
opt-level = 3
